--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-uuid": "^2.0.0",
     "sass": "^1.69.4"
   },
   "devDependencies": {
